@@ -1,17 +1,17 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.4007
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'NAME' => 'Spork::Shlomify',
-          'VERSION_FROM' => 'lib/Spork/Shlomify.pm',
-          'PREREQ_PM' => {
-                           'Spork' => '0',
-                           'Test::More' => '0'
-                         },
-          'INSTALLDIRS' => 'site',
-          'EXE_FILES' => [
-                           'bin/shspork'
-                         ],
-          'PL_FILES' => {}
-        )
+  'NAME' => 'Spork::Shlomify',
+  'VERSION_FROM' => 'lib/Spork/Shlomify.pm',
+  'PREREQ_PM' => {
+                   'Spork' => 0,
+                   'Test::More' => 0
+                 },
+  'INSTALLDIRS' => 'site',
+  'EXE_FILES' => [
+                   'bin/shspork'
+                 ],
+  'PL_FILES' => {}
+)
 ;
