@@ -1,7 +1,10 @@
 Revision history for Spork-Shlomify
 
+          Convert Module::Build to Test::Run::Builder.
+
 0.0200    Sun Aug 27 13:58:44 IDT 2006
           Made sure the <img tag validates.
+
 0.0100    Thu Mar  9 11:43:57 IST 2006
           First version, released on an unsuspecting world.
 
